ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-08-04 Benedikt Heintel
	- DOCS:
		* Updated all INSTALL
	- TOOLS:
		* Updated: PHPmyAdmin to 2.11.8.1
	- LANGUAGES:
		* Updated all languages files.

2008-08-03 Malte Geierhos
	- SETUP:
		* Fixed #1443: If MySQL root-password contains a | the ispcp-setup script ends up with an error

2008-08-03 Benedikt Heintel
	- LANGUAGES:
		* Updated Japanese

2008-08-03 Daniel Andreca
	- GUI:
		* Fixed #1079: Error adding user when opening new tab/window

2008-08-02 Benedikt Heintel
	- GUI:
		* Fixed #846: Wrong german text format of "Are you sure you want to delete" and other remarks to manage_domains.php
		* Fixed #1445: Mysql username/password exposed if database is down!
	- LANGUAGES:
		* Updated Chinese
		* Updated Dutch
		* Updated Spanish
		* Added Swedish

2008-07-29 Benedikt Heintel
	- GUI:
		* Fixed #1441: lost password link leads to an incorrect page
	- DISTS:
		* Fixed #1440: (CentOS) lsb_release not installed on CentOS

2008-07-25 Benedikt Heintel
	- DOCS:
		* Fixed #1435: Update FreeBSD Doc
	- TOOLS:
		* Fixed #1426: webmail: bookmarks doesn't work

2008-07-22 Daniel Andreca
	- ENGINE:
		* Fixed #1438: htdocs/images bad owner

2008-07-21 Daniel Andreca
	- ENGINE:
		* Subdomains and aliases emails were not removed when reseller/admin remove parent domain
	- GUI:
		* Corrected link for update hosting plan in ispcp/gui/themes/omega_original/client/hosting_plan_update.tpl
		* Corrected output for subdomain mail in ispcp/gui/client/mail_accounts.php
		* Remove residual data from table on user remove.
		* Fixed #1434: rootkit.log.php

2008-07-20 Daniel Andreca
	- ENGINE:
		* Minor fix for engine/ispcp-als-mngr
	- GUI:
		* Add missing file
		* Cleaning gui/admin/domain_status_change.php
		* Fixed #1432: rv1279 /admin/domain_status_change.php r1281 reseller/alias_add.php white page
		* Add daemon request count in htaccess htaccess_user and htaccess_groups tables: gui/admin/ispcp_debugger.php
