@@ -1578,7 +1578,7 @@ sub dmn_add_httpd_file_data {
 		opendir(DIR, "$www_dir/$dmn_name/htdocs/images/");
 		my @files = readdir(DIR);
 		closedir(DIR);
-			
+
 		foreach (@files) {
 			# ignore . and .. :
             next if ($_ eq "." || $_ eq "..");
@@ -3443,7 +3443,7 @@ sub dmn_restore_data {
 					my $dbpass = @$rdata2[1];
 					# if username and pass for db exists - restore database from file
 					if ($dbuser && $dbpass) {
-						$cmd = "$cmd_bzcat -d $dmn_bk_dir/$fname | $cmd_mysql --user=$dbuser --password=$dbpass --database=$db_name";
+						$cmd = "$cmd_bzcat -d $dmn_bk_dir/$fname | $cmd_mysql --user=\"$dbuser\" --password=\"$dbpass\" --database=\"$db_name\"";
 						$rs = sys_command($cmd);
 						return $rs if ($rs != 0);
 					}
@@ -3471,7 +3471,7 @@ sub dmn_restore_data {
 					my $dbpass = @$rdata2[1];
 					# if username and pass for db exists - restore database from file
 					if ($dbuser && $dbpass) {
-						$cmd = "$cmd_gzcat -d $dmn_bk_dir/$fname | $cmd_mysql --user=$dbuser --password=$dbpass --database=$db_name";
+						$cmd = "$cmd_gzcat -d $dmn_bk_dir/$fname | $cmd_mysql --user=\"$dbuser\" --password=\"$dbpass\" --database=\"$db_name\"";
 						$rs = sys_command($cmd);
 						return $rs if ($rs != 0);
 					}
